Last round of editing finished.

--- a/tafaseer_group/03_results/paper.bib
+++ b/tafaseer_group/03_results/paper.bib
@@ -46,15 +46,17 @@
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Robson, J.},
   editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  date = {2012},
   options = {useprefix=true}
 }
 
 @incollection{mallett,
   title = {Ibn Al-{{Jawzī}}},
   booktitle = {Christian-{{Muslim Relations}} 600 - 1500},
-  author = {Alex, Mallett},
-  editorb = {Thomas, David},
-  editorbtype = {redactor}
+  author = {Mallett, Alex},
+  editorb = {David, Thomas},
+  editorbtype = {redactor},
+  year = {ca. 2009}
 }
 
 @article{salahi2002,
@@ -79,6 +81,7 @@
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Laoust, H.},
   editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  date = {2012},
   options = {useprefix=true}
 }
 
@@ -96,6 +99,7 @@
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Poonawala, I. and Wensinck, A. J. and Heffening, W.},
   editor = {Bearman, I. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  date = {2012},
   options = {useprefix=true}
 }
 
@@ -104,7 +108,8 @@
   title = {Al-{{Baydāwī}}},
   booktitle = {Encyclopedia of the {{Medieval Chronicle}}},
   author = {Krauss-Sánchez, Heidi R.},
-  editor = {Dunphy, Graeme and Bratu, Cristian}
+  editor = {Dunphy, Graeme and Bratu, Cristian},
+  date = {2016}
 }
 
 @inreference{ei_abuhayyan,
@@ -112,7 +117,8 @@
   title = {Abū {{Ḥayyān}} Al-{{Gharnāṭī}}},
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Glazer, Sidney and Homerin, Th. Emil},
-  editor = {Fleet, Kate and Krämer, Gudrun and Matringe, Denis and Nawas, John and Rowson, Everett}
+  editor = {Fleet, Kate and Krämer, Gudrun and Matringe, Denis and Nawas, John and Rowson, Everett},
+  date = {2008}
 }
 
 @inreference{ei_almawardi,
@@ -131,6 +137,7 @@
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Fleisch, H.},
   editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  date = {2012},
   options = {useprefix=true}
 }
 
@@ -145,7 +152,7 @@
 @inreference{eb_alsuyuti,
   title = {Al-{{Suyuti}}},
   booktitle = {Encyclopedia {{Britannica Online}}},
-  author = {{The Editors of Encyclopædia Britannica}},
+  author = {{Encyclopædia Britannica}},
   date = {2007-05-16}
 }
 
@@ -166,11 +173,11 @@
   date = {2002}
 }
 
-@inreference{wikipedia_alsamarqandi,
-  title = {Shams Al-{{Dīn}} Al-{{Samarqandī}}},
+@inreference{wpfr_tafsirsamarqandi,
+  title = {Tafsîr As Samarqandî},
   booktitle = Wikipedia,
-  author = {{The Users of Wikipedia}},
-  date = {2011}
+  author = {{Wikipedia}},
+  year = {probably 2011}
 }
 
 @misc{zahoor1998,
