--- a/tafaseer_group/03_results/paper.rmd
+++ b/tafaseer_group/03_results/paper.rmd
@@ -122,7 +122,9 @@ Where *ʿAbd as-Salām* died, much later *Ǧalāl ad-Dīn as-Suyūṭī* was bor
 
 # 4 Conclusion
 
-From the results of the study we cannot definitively state that focusing on certain aspects of the Quran is determined principally by any of the factors mentioned at the beginning of this paper (chronology, geography or dogma). It is our contention that examining commentaries that are able to be divided up at the verse-level should yield clearer, more consistent clusters. There was a surprisingly large degree of overlap among the lists of top twenty-five *suwar*. Shorter *suwar* may require more commentary simply because their laconic nature demands contextualizing and therefore their placement at the top of the lists reveals little about the attention *mufassirūn* gave to certain sections of the Quran. What this research did was attempt to explore  a new method of charting the relationships of Quranic scholars that rely on an impartial, distant examination of *tafāsīr* that traditional categorization--according to sect or school of jurisprudence--may lack. The results were not as conclusive as we had hoped, however, we believe that examination of *sūra* and *āya* preferences of Quranic exegetes deserves further exploration.
+From the results of the study we cannot definitively state that focusing on certain aspects of the Quran is determined principally by any of the factors mentioned at the beginning of this paper (chronology, geography or dogma). It is our contention that examining commentaries that are able to be divided up at the verse-level should yield clearer, more consistent clusters. There was a surprisingly large degree of overlap among the lists of top twenty-five *suwar*. Shorter *suwar* may require more commentary simply because their laconic nature demands contextualizing and therefore their placement at the top of the lists reveals little about the attention *mufassirūn* gave to certain sections of the Quran.
+
+What this research did was attempt to explore  a new method of charting the relationships of Quranic scholars that rely on an impartial, distant examination of *tafāsīr* that traditional categorization--according to sect or school of jurisprudence--may lack. The results were not as conclusive as we had hoped, however, we believe that examination of *sūra* and *āya* preferences of Quranic exegetes deserves further exploration.
 
 # 5 References
 
