--- a/tafaseer_group/03_results/paper.rmd
+++ b/tafaseer_group/03_results/paper.rmd
@@ -48,7 +48,7 @@ As part of an effort to make Islamic scholarship more accessible, the Jordanian-
 
 ## 2.1 The tafāsīr
 
-The following *tafāsīr* which ended up being the subject of the present paper are listed below. Short remarks on some of their authors' biographies will follow in section 3.2.
+The following *tafāsīr* which ended up being the subject of our work are listed below. Short remarks on some of their authors' biographies will follow in section 3.2.
 
 * *al-baḥr al-muḥīt* by *Abū Ḥayyān*
 * *al-ǧāmiʿ li-ʾaḥkām al-qurʾān* by *al-Qurṭubī*
